# AFKy-bot

./: .exampledotenv  .gitignore  Cargo.toml  README.md
src/: main.rs
